implementation of endpoint to request password change and reset password, also included validation in endpoint upload images
